--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
   "bugs": {
     "url": "https://github.com/jhbertra/sodium-dom/issues"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^14.14.37",
+    "ts-node": "^9.1.1",
+    "tslib": "^2.1.0",
+    "typescript": "^4.2.3"
+  }
 }
