--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "parcel": "^2.0.0-beta.2",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "tslib": "^2.1.0",
