--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,8 +21,8 @@
     "strict": true,
     "target": "es5"
   },
-  "files": [
-    "./src/index.ts"
+  "include": [
+    "./src/**/*.ts"
   ],
   "exclude": [
     "node_modules",
