--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "fast-check": "^2.14.0",
+    "fp-ts": "^2.10.5",
     "jest": "^26.6.3",
     "parcel": "^2.0.0-beta.2",
     "prettier": "^2.2.1",
