--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "fast-check": "^2.14.0",
     "fp-ts": "^2.10.5",
     "jest": "^26.6.3",
+    "jsdom": "^16.5.3",
     "parcel": "^2.0.0-beta.2",
     "prettier": "^2.2.1",
     "ts-jest": "^26.5.5",
